@@ -3,6 +3,7 @@ Auto IRC Bot 3.0: Change Log
 
 3.0 Indev
 ==================================================================
+    * Added mdelete() to DB/Flatfile.
     * Added topic() to API::IRC.
     * Added has_priv() to API::Std.
     * Finished the host-based privilege/permission system.
